--- a/app/task-pool.html
+++ b/app/task-pool.html
@@ -14,7 +14,7 @@
     let alreadyDone;
     let done;
 
-    const markbotTaskReset = function () {
+    const lintbotTaskReset = function () {
       let scriptTags = document.querySelectorAll('script:not(.do-not-remove)');
 
       alreadyDone = false;
