--- a/frontend/main/main.html
+++ b/frontend/main/main.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Markbot</title>
+  <title>Lintbot</title>
   <link href="../common.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
   <link href="toolbar.css" rel="stylesheet">
@@ -74,9 +74,21 @@
       <path d="M181.9 229.7c-2.9 2.5-6 3.9-8.8 3.9s-6.1-2.4-6.1-6.1 2.3-7.1 11.4-7.1h3.4v9.3m8 9.1v-28c0-7.2-4.1-11.9-13.9-11.9a36.7 36.7 0 0 0-14.9 3.2l1.2 5a34.7 34.7 0 0 1 11.5-2.3c5.7 0 8.1 2.3 8.1 7v3.5H179c-13.8 0-20 5.4-20 13.4s4.1 10.9 11.8 10.9c5 0 8.7-2 12.1-5l.6 4.3h6.3z"/>
       <path d="M77 245.4a21.1 21.1 0 0 1-10 7.5l-4-4.7a16.6 16.6 0 0 0 7-6.5c1.1-2.1 1.5-4.8 1.5-11.4v-44.7H80v44.2c0 8.7-.7 12.2-3 15.7"/>
     </symbol>
-    <symbol id="icon-progress" viewBox="0 0 256 256">
-      <rect x="6" y="6" rx="12" ry="12" width="244" height="244"/>
-      <path fill="#fff" d="M97.9 162.7c4.8-10.2 10.5-21.3 17.2-33.4A424.1 424.1 0 0 1 137.8 93c8.5-12 14.6-20 18.5-24s7.2-7 9.8-9.3 7.5-4.1 14.3-5.1a104.4 104.4 0 0 1 15.5-1.6 8 8 0 0 1 5.7 2.1 7.5 7.5 0 0 1 2.2 5.6 8.1 8.1 0 0 1-1.3 4.7 37.5 37.5 0 0 1-5.3 5.8c-13.1 12-26.6 29-40.7 51.2s-25.3 43.7-33.6 64.5c-3.9 9.5-6.4 15.1-7.6 16.8a16.6 16.6 0 0 1-5.1 4.6c-2.3 1.4-7.1 2.1-14.3 2.1s-9.4-.3-11-1a16.1 16.1 0 0 1-3.6-2.2c-.9-.8-3.3-4.3-7.4-10.4a183.1 183.1 0 0 0-18.2-22.7c-4.5-5.1-6.8-9.3-6.8-12.6q0-7.4 7.8-12.9c5.2-3.6 9.8-5.4 13.7-5.4s9.1 1.8 14 5.3a54.2 54.2 0 0 1 13.5 14.2z"/>
+    <symbol id="icon-courseweb" x="0px" y="0px" viewBox="0 0 297 297" style="enable-background:new 0 0 297 297;" xml:space="preserve">
+      <path d="M287.631,15.459H157.869v-6.09c0-5.174-4.195-9.369-9.369-9.369s-9.369,4.195-9.369,9.369v6.09H9.369
+    c-5.174,0-9.368,4.195-9.368,9.369v30.918c0,5.174,4.194,9.369,9.368,9.369h6.09v160.68c0,5.174,4.195,9.369,9.369,9.369h104.934
+    L94.628,282.01c-3.104,4.139-2.266,10.012,1.874,13.116c1.685,1.265,3.657,1.874,5.614,1.874c2.848,0,5.661-1.294,7.502-3.748
+    l29.513-39.35v33.729c0,5.174,4.195,9.369,9.369,9.369s9.369-4.195,9.369-9.369v-33.729l29.513,39.35
+    c1.841,2.454,4.653,3.748,7.502,3.748c1.957,0,3.929-0.61,5.614-1.874c4.14-3.104,4.979-8.978,1.874-13.116l-35.134-46.846h104.934
+    c5.174,0,9.368-4.195,9.368-9.369V65.115h6.091c5.174,0,9.368-4.195,9.368-9.369V24.828
+    C296.999,19.654,292.805,15.459,287.631,15.459z M18.738,46.377v-12.18h259.523v12.18H18.738z M262.803,216.426H34.197V65.115
+    h228.605V216.426z"/>
+  <path d="M71.205,142.411h139.131c5.174,0,9.369-4.195,9.369-9.369c0-5.174-4.195-9.369-9.369-9.369H71.205
+    c-5.174,0-9.369,4.195-9.369,9.369C61.836,138.216,66.031,142.411,71.205,142.411z"/>
+  <path d="M71.205,111.493h30.918c5.174,0,9.369-4.194,9.369-9.369c0-5.174-4.195-9.369-9.369-9.369H71.205
+    c-5.174,0-9.369,4.195-9.369,9.369C61.836,107.299,66.031,111.493,71.205,111.493z"/>
+  <path d="M71.205,173.328h92.754c5.174,0,9.369-4.195,9.369-9.369s-4.195-9.369-9.369-9.369H71.205
+    c-5.174,0-9.369,4.195-9.369,9.369S66.031,173.328,71.205,173.328z"/>
     </symbol>
   </svg>
 
@@ -84,8 +96,8 @@
     <div class="toolbar-button-segment">
       <ul class="toolbar-buttons">
         <li>
-          <button class="toolbar-button" id="open-progress" aria-label="See Your Progress" title="See Your Progress" disabled data-can-be-enabled="true">
-            <span><i class="icon i-14"><svg><use xlink:href="#icon-progress"></use></svg></i></span>
+          <button class="toolbar-button" id="open-courseweb" aria-label="View Course Website" title="View Course Website" disabled data-can-be-enabled="true">
+            <span><i class="icon i-14"><svg><use xlink:href="#icon-courseweb"></use></svg></i></span>
           </button>
         </li>
       </ul>
@@ -101,7 +113,7 @@
           </button>
         </li>
       </ul>
-      <ul class="toolbar-buttons toolbar-buttons-group">
+      <!--<ul class="toolbar-buttons toolbar-buttons-group">
         <li>
           <button class="toolbar-button" id="open-repo" aria-label="Browse GitHub Repo" title="Browse GitHub Repo" disabled data-can-be-enabled="false" tabindex="-1">
             <span><i class="icon i-16"><svg><use xlink:href="#icon-github"></use></svg></i></span>
@@ -112,7 +124,7 @@
             <span><i class="icon i-16"><svg><use xlink:href="#icon-issue"></use></svg></i></span>
           </button>
         </li>
-      </ul>
+      </ul>-->
     </div>
     <div class="toolbar-button-segment">
       <ul class="toolbar-buttons toolbar-buttons-group">
@@ -149,7 +161,8 @@
       </ul>
 
     </div>
-    <div class="toolbar-button-segment">
+
+    <!--<div class="toolbar-button-segment">
       <ul class="toolbar-buttons">
         <li>
           <button class="toolbar-button toolbar-button-green" id="submit-btn" aria-label="Submit Assignment" title="Submit Assignment" data-can-submit="false" disabled tabindex="-1">
@@ -158,6 +171,19 @@
              <i class="icon i-14" id="submit-icon-done"><svg><use xlink:href="#icon-done"></use></svg></i>
              <span id="button-text">Submit</span>
             </span>
+          </button>
+        </li>
+      </ul>
+    </div>-->
+
+    <div class="toolbar-button-segment">
+      <ul class="toolbar-buttons">
+        <li>
+          <button class="toolbar-button toolbar-button-green"
+                  id="reports-btn"
+                  aria-label="View Reports"
+                  title="View Reports"
+                  disabled tabindex="-1">View Reports
           </button>
         </li>
       </ul>
@@ -214,7 +240,7 @@
       </div>
     </header>
 
-    <div class="success-fail" id="submit" data-state="hidden">
+    <!--<div class="success-fail" id="submit" data-state="hidden">
       <svg class="logo" id="all-good-check" width="256" height="256" viewBox="0 0 256 256">
         <circle id="all-good-check-bg" cx="128" cy="128" r="86.9" fill="#6dd110" opacity=".2"/>
         <circle id="all-good-check-bg-filled" cx="128" cy="128" r="86.9" fill="#6dd110" opacity="0"/>
@@ -243,7 +269,7 @@
           <dd id="stats-commits"></dd>
         </div>
       </dl>
-    </div>
+    </div>-->
 
     <div class="messages-loader" id="messages-loader" aria-label="Loading…">
       <i class="messages-loader-icon">
@@ -301,7 +327,7 @@
     </div>
   </div>
 
-  <div class="overlay" id="sign-in" data-state="hidden">
+  <!--<div class="overlay" id="sign-in" data-state="hidden">
     <div class="overlay-contents">
       <svg class="logo" viewBox="0 0 512 512">
         <defs>
@@ -351,7 +377,7 @@
         </div>
       </form>
     </div>
-  </div>
+  </div>-->
 
   <div class="overlay" id="dependencies" data-state="hidden">
     <div class="overlay-contents">
@@ -390,9 +416,9 @@
           </g>
         </svg>
         <h1>Your computer is missing the following tools:</h1>
-        <p><em>Markbot is unable to run properly without these tools installed on your computer.</em></p>
+        <p><em>Lintbot is unable to run properly without these tools installed on your computer.</em></p>
         <ul class="deps-list">
-          <li id="dep-git">
+          <!--<li id="dep-git">
             <i class="icon i-64"><svg><use xlink:href="#icon-git"></use></svg></i>
             <div>
               <h2>Git command line tools are missing</h2>
@@ -400,13 +426,13 @@
               <a class="dep-win" href="https://github.com/thomasjbradley/markbot/blob/master/docs/install-git-command-line-tools-win.md">Follow these instructions for Windows installation</a>
               <small>(Used for checking commits &amp; sync status)</small>
             </div>
-          </li>
+          </li>-->
           <li id="dep-java">
             <i class="icon i-64"><svg><use xlink:href="#icon-java"></use></svg></i>
             <div>
               <h2>Java Development Kit tools are missing</h2>
-              <a class="dep-mac" href="https://github.com/thomasjbradley/markbot/blob/master/docs/install-java-developer-kit-mac.md">Follow these instructions for Mac installation</a>
-              <a class="dep-win" href="https://github.com/thomasjbradley/markbot/blob/master/docs/install-java-developer-kit-win.md">Follow these instructions for Windows installation</a>
+              <a class="dep-mac" href="https://github.com/thomasjbradley/markbot/blob/master/docs/install-java-developer-kit-mac.md">Follow these instructions for Mac installation</a> <!--TODO: update these links using config file-->
+              <a class="dep-win" href="https://github.com/thomasjbradley/markbot/blob/master/docs/install-java-developer-kit-win.md">Follow these instructions for Windows installation</a> <!--TODO: update these links using config file-->
               <small>(Used for the HTML, CSS &amp; language validators)</small>
             </div>
           </li>
@@ -485,15 +511,16 @@
           <span class="line-4">Do the robot dance!</span>
         </p>
       </div>
+      <div><p style="color: grey;">Based on Markbot by Thomas J Bradley</p></div>
     </div>
   </div>
 
   <div class="alert-wrap" id="alert" hidden>
     <div class="alert" id="alert-box" tabindex="0">
-      <p><strong id="alert-text">Unable to connect to the HTML validator; the background process may have crashed. Please quit & restart Markbot.</strong></p>
+      <p><strong id="alert-text">Unable to connect to the HTML validator; the background process may have crashed. Please quit & restart Lintbot.</strong></p>
       <div class="btn-wrap">
         <button class="btn alert-btn toolbar-button" id="alert-btn-okay">Okay</button>
-        <button class="btn alert-btn toolbar-button" id="alert-btn-restart" hidden>Restart Markbot</button>
+        <button class="btn alert-btn toolbar-button" id="alert-btn-restart" hidden>Restart Lintbot</button>
       </div>
     </div>
   </div>
